--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">s205452 Lykkehjulet</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_game">Game</string>
+    <string name="title_highscore">Highscore</string>
+    <string name="title_end_message">Win/Loss Screen</string>
 </resources>
