--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_game">Game</string>
     <string name="title_highscore">Highscore</string>
     <string name="title_end_message">Win/Loss Screen</string>
+    <string name="spin_the_wheel_button">Spin the wheel!</string>
+    <string name="wheel_text">Click on "Spin the wheel!"</string>
 </resources>
